--- a/sass/components/_modul_button.scss
+++ b/sass/components/_modul_button.scss
@@ -46,19 +46,29 @@
     margin-left: 10px;
   }
 }
-
 .btn {
   display: flex;
-  justify-content: center;
-  margin-bottom: 50px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 
-  &__nav:not(:last-child) {
-    margin-right: 8px;
+  &__nav {
     display: block;
+
+    @media screen and (max-width: 767px) {
+      margin-bottom: 15px;
+
+      &:not(:last-child) {
+        margin-right: 8px;
+      }
+
+      &:nth-last-child(-n + 2) {
+        margin-bottom: 0px;
+      }
+    }
   }
 
   &__modul {
-    padding: 6px 12px;
+    padding: 6px 22px;
     border-radius: 4px;
 
     font-family: var(--main-font);
@@ -87,3 +97,53 @@
     }
   }
 }
+
+@media screen and (min-width: 768px) {
+  .btn {
+    justify-content: center;
+    &__nav:not(:last-child) {
+      margin-right: 8px;
+    }
+  }
+}
+
+// .btn {
+//   display: flex;
+//   justify-content: center;
+//   margin-bottom: 50px;
+
+//   &__nav:not(:last-child) {
+//     margin-right: 8px;
+//     display: block;
+//   }
+
+//   &__modul {
+//     padding: 6px 12px;
+//     border-radius: 4px;
+
+//     font-family: var(--main-font);
+//     font-weight: 500;
+//     font-size: 16px;
+//     line-height: 1.62;
+//     text-align: center;
+//     letter-spacing: 0.03em;
+
+//     color: var(--title-text-color);
+//     background: var(--team-selection-bgc);
+//     border: none;
+
+//     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//       color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//       box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//     &:hover,
+//     &:focus {
+//       cursor: pointer;
+//       color: var(--main-bgc);
+//       background-color: var(--focus-color);
+//       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+//         0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+//       border-radius: 4px;
+//     }
+//   }
+// }
