--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,7 +1,5 @@
 .header {
-  padding-top: 16px;
-  padding-bottom: 16px;
-  padding-left: 15px;
+  padding: 16px 0;
 }
 
 .current {
@@ -139,7 +137,9 @@
 
 @media screen and (min-width: 768px) {
   .header {
-    border-bottom: 1px solid #ececec;
+    .container {
+      border-bottom: 1px solid #ececec;
+    }
     .logo {
       margin-right: 0px;
     }
@@ -158,6 +158,10 @@
     align-items: center;
     justify-content: space-between;
 
+    &__item {
+      position: relative;
+    }
+
     &__link {
       display: flex;
       padding-top: 32px;
@@ -173,13 +177,28 @@
       margin-right: 50px;
     }
   }
+
+  & .current {
+    color: var(--focus-color);
+  }
+}
+
+.current::after {
+  position: absolute;
+  content: "";
+  left: 0;
+  bottom: 0;
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+  background-color: var(--focus-color);
+  display: block;
 }
 
 .contact-nav {
   &__link {
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 14px;
@@ -187,8 +206,19 @@
     color: var(--prymari-text-color);
   }
 
+  &__tel {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
   &__mail {
-    margin-bottom: 10px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    @media screen and (max-width: 1199px) {
+      margin-bottom: 10px;
+    }
   }
 
   &__mail-img {
@@ -202,6 +232,60 @@
     height: 16px;
     fill: var(--prymari-text-color);
     margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .contact-nav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    &__mail {
+      margin-right: 30px;
+    }
+
+    &__mail-img {
+      fill: currentColor;
+
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    &__phone-img {
+      fill: currentColor;
+
+      transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+    &__phone-img:hover,
+    &__phone-img:focus {
+      fill: var(--focus-color);
+    }
+
+    &__mail-img:hover,
+    &__mail-img:focus {
+      fill: var(--focus-color);
+    }
+
+    &__link {
+      color: currentColor;
+
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &__phone-img:hover,
+      &__phone-img:focus {
+        fill: var(--focus-color);
+      }
+
+      &__mail-img:hover,
+      &__mail-img:focus {
+        fill: var(--focus-color);
+      }
+
+      &:hover,
+      &:focus {
+        color: var(--focus-color);
+      }
+    }
   }
 }
 // .header {
