--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,13 +1,18 @@
 .portf-list {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  @media screen and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .portfolio {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  // &__nav {
+  //   display: flex;
+  // }
 
   &__block {
     display: block;
@@ -40,12 +45,6 @@
     box-sizing: border-box;
     border-top: none;
   }
-}
-
-.portfolio-nav {
-  flex-basis: calc(100% / 3 - 30px);
-  margin-left: 30px;
-  margin-top: 30px;
 
   &__wrapper {
     position: relative;
@@ -70,3 +69,91 @@
   line-height: 1.56;
   color: var(--main-bgc);
 }
+
+@media screen and (min-width: 768) {
+  .portfolio {
+    display: flex;
+    justify-content: none;
+    flex-wrap: wrap;
+    margin-top: -30px;
+    margin-right: -30px;
+    &__nav {
+      margin-top: 30px;
+      margin-right: 30px;
+      flex-basis: calc(100% / 2 - 30px);
+    }
+  }
+}
+
+// .portf-list {
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+// }
+
+// .portfolio {
+//   display: flex;
+//   flex-wrap: wrap;
+//   margin-left: -30px;
+//   margin-top: -30px;
+
+//   &__block {
+//     display: block;
+
+//     &:hover .overlay,
+//     &:focus .overlay {
+//       transform: translateY(0%);
+//     }
+
+//     &:hover,
+//     &:focus {
+//       box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+//         0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+//       border-radius: 4px;
+//     }
+//   }
+
+//   &__text {
+//     font-family: var(--main-font);
+//     font-weight: 400;
+//     font-size: 16px;
+//     line-height: 1.87;
+//     letter-spacing: 0.03em;
+//     color: var(--prymari-text-color);
+//   }
+
+//   &__content {
+//     padding: 20px 24px 20px 24px;
+//     border: 1px solid #eeeeee;
+//     box-sizing: border-box;
+//     border-top: none;
+//   }
+// }
+
+// .portfolio-nav {
+//   flex-basis: calc(100% / 3 - 30px);
+//   margin-left: 30px;
+//   margin-top: 30px;
+
+//   &__wrapper {
+//     position: relative;
+//     overflow: hidden;
+//   }
+// }
+
+// .overlay {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   height: 100%;
+//   padding: 63px 24px;
+//   transform: translateY(100%);
+//   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   background: rgba(33, 150, 243, 0.9);
+
+//   font-family: var(--main-font);
+//   font-weight: 400;
+//   font-size: 18px;
+//   line-height: 1.56;
+//   color: var(--main-bgc);
+// }
