--- a/sass/layout/_team-selection.scss
+++ b/sass/layout/_team-selection.scss
@@ -1,6 +1,12 @@
 .team-section {
-  padding-top: 60px;
-  padding-bottom: 60px;
+  @media screen and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
   background: var(--team-selection-bgc);
 }
 
@@ -12,8 +18,10 @@
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
 
-    &:not(:last-child) {
-      margin-bottom: 30px;
+    @media screen and (max-width: 1199px) {
+      &:not(:last-child) {
+        margin-bottom: 30px;
+      }
     }
 
     &_info {
@@ -56,6 +64,70 @@
   fill: var(--social-icon-color);
 }
 
+@media screen and (min-width: 768px) {
+  .team {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    &__worker {
+      flex-basis: calc(100% / 2 - 30px);
+
+      @media screen and (max-width: 1199px) {
+        &:nth-child(2n) {
+          margin-left: 30px;
+        }
+
+        &:nth-last-child(-n + 2) {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team {
+    flex-wrap: nowrap;
+    margin-top: -30px;
+    margin-left: -30px;
+
+    &__worker {
+      margin-top: 30px;
+      margin-left: 30px;
+      flex-basis: calc(100% / 4 - 30px);
+    }
+  }
+
+  .social-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: 30px;
+    margin-left: 30px;
+
+    &__link {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 44px;
+      height: 44px;
+      border-radius: 50%;
+
+      transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      &:hover,
+      &:focus {
+        background-color: var(--focus-color);
+      }
+
+      &:hover .social-list-icon,
+      &:focus .social-list-icon {
+        fill: var(--main-bgc);
+      }
+    }
+  }
+}
 // .team-section {
 //   display: flex;
 //   padding-top: 94px;
