--- a/css/main.css
+++ b/css/main.css
@@ -304,6 +304,13 @@ img {
   color: var(--main-bgc);
 }
 
+@media (max-width: 1199px) {
+  .hero-title {
+    font-size: 26px;
+    line-height: 1.62;
+  }
+}
+
 .second-title {
   margin-bottom: 50px;
   font-family: var(--main-font);
@@ -707,12 +714,62 @@ img {
 }
 
 .hero {
-  max-width: 480px;
-  height: auto;
-  background-image: url("./img/bg.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/mobile/hero/hero-img1.jpg");
   background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media screen and (max-width: 1199px) {
+  .hero {
+    padding-top: 118px;
+    padding-bottom: 118px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .hero {
+    padding-top: 200px;
+    padding-bottom: 200px;
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/mobile/hero/hero-img@2x.jpg");
+  }
+}
+
+@media (min-width: 768px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/tablet/hero/hero-img1.jpg");
+  }
+  .hero__theme {
+    padding-right: 204px;
+    padding-left: 204px;
+  }
+}
+
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/tablet/hero/hero-img@2x.jpg");
+  }
+}
+
+@media (min-width: 1200px) {
+  .hero {
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/desktop/hero/hero-img1.jpg");
+  }
+  .hero__theme {
+    padding-right: 250px;
+    padding-left: 250px;
+  }
+}
+
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .hero {
+    background-image: linear-gradient(to bottom, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/desktop/hero/hero-img@2x.jpg");
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -1312,18 +1369,46 @@ img {
   color: var(--main-bgc);
 }
 
-@media screen and (min-width: 768) {
+@media screen and (max-width: 767px) {
+  .portfolio__nav:not(:last-child) {
+    margin-bottom: 30px;
+  }
+}
+
+@media (min-width: 768px) {
   .portfolio {
     display: flex;
-    justify-content: none;
     flex-wrap: wrap;
-    margin-top: -30px;
     margin-right: -30px;
+    margin-top: -30px;
   }
   .portfolio__nav {
-    margin-top: 30px;
+    display: flex;
     margin-right: 30px;
+    padding-top: 30px;
     flex-basis: calc(100% / 2 - 30px);
+  }
+  .portfolio__block {
+    display: flex;
+    flex-direction: column;
+  }
+  .portfolio__content {
+    flex-grow: 1;
+  }
+}
+
+@media (max-width: 1199px) {
+  .portfolio_nav {
+    margin-bottom: 30px;
+  }
+  .portfolio_nav:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .portfolio__nav {
+    flex-basis: calc(100% / 3 - 30px);
   }
 }
 /*# sourceMappingURL=main.css.map */
