--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,6 +7,11 @@
   background-color: var(--main-bgc);
   padding: 40px;
 }
+@media (max-width: 480px) {
+  .modal {
+    width: 100%;
+  }
+}
 
 .modal-close-btn {
   position: absolute;
