--- a/css/main.css
+++ b/css/main.css
@@ -473,7 +473,7 @@ img {
   }
 }
 
-.current {
+.header .current {
   color: var(--focus-color);
 }
 
@@ -612,8 +612,9 @@ img {
     font-size: 14px;
     line-height: 1.14;
     color: var(--title-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-  .site-nav__link__link:hover, .site-nav__link__link:focus {
+  .site-nav__link:hover, .site-nav__link:focus {
     color: var(--focus-color);
   }
   .site-nav__item:not(:last-child) {
