--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,18 +4,27 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
+  .container {
+    @media (min-width: 1200) {
+      align-items: baseline;
+    }
+  }
+
   .logo {
     margin: 0;
     margin-bottom: 20px;
     display: flex;
     align-items: center;
-    justify-content: center;
+
+    @media (max-width: 1199px) {
+      justify-content: center;
+    }
   }
 }
 
 .contact-list {
-  text-align: center;
   @media (max-width: 1199px) {
+    text-align: center;
     margin-bottom: 60px;
   }
 
@@ -46,7 +55,9 @@
   }
 
   &__title {
-    justify-content: center;
+    @media (max-width: 1199px) {
+      justify-content: center;
+    }
   }
 }
 
@@ -79,7 +90,6 @@
 .invite-form-input {
   height: 50px;
   width: 100%;
-  margin-bottom: 20px;
   margin-right: 12px;
   padding-left: 16px;
   outline: none;
@@ -95,6 +105,14 @@
   &::placeholder {
     color: rgba(255, 255, 255, 0.6);
   }
+
+  @media (max-width: 1199px) {
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: 1200px) {
+    width: 358px;
+  }
 }
 
 .invite-btn {
@@ -106,8 +124,10 @@
 @media screen and (min-width: 768px) {
   .footer {
     .logo {
-      margin-left: 120px;
-      justify-content: left;
+      @media (max-width: 1199px) {
+        margin-left: 120px;
+        justify-content: left;
+      }
     }
   }
 
@@ -119,8 +139,10 @@
   }
 
   .adress {
-    width: 232px;
-    margin-left: 76px;
+    @media (max-width: 1199px) {
+      width: 232px;
+      margin-left: 76px;
+    }
   }
 
   .invite {
@@ -130,8 +152,10 @@
   }
 
   .invite-wrapper {
-    width: 450px;
     margin: 0 auto;
+    @media (max-width: 1199px) {
+      width: 450px;
+    }
   }
 }
 
@@ -139,10 +163,12 @@
   .footer {
     & .container {
       display: flex;
+      align-items: baseline;
     }
   }
   .footer-info {
     display: flex;
+    align-items: baseline;
   }
 
   .contact-list {
@@ -174,6 +200,10 @@
 
   .follow {
     margin-left: auto;
+  }
+
+  .label-wrapper {
+    display: flex;
   }
 }
 // .footer {
