--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -78,6 +78,8 @@
     font-size: 12px;
     line-height: 1.16;
     letter-spacing: 0.03em;
+    display: flex;
+    flex-wrap: wrap;
   }
 
   align-items: center;
