--- a/css/main.css
+++ b/css/main.css
@@ -774,7 +774,6 @@ img {
 @media (min-width: 768px) {
   .hero {
     width: 767px;
-    margin: auto;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/tablet/hero/hero-img1.jpg");
   }
   .hero__theme {
@@ -791,6 +790,7 @@ img {
 
 @media (min-width: 1200px) {
   .hero {
+    width: 1600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../img/desktop/hero/hero-img1.jpg");
   }
   .hero__theme {
